--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,19 +1,12 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans&family=Tilt+Prism&display=swap");
-@font-face {
-  font-family: "Menlo";
-  src: url("asset/fonts/Menlo-Regular.woff.eot");
-  src: url("asset/fonts/Menlo-Regular.woff.eot?#iefix") format("embedded-opentype"), url("asset/fonts/Menlo-Regular.woff.woff") format("woff"), url("asset/fonts/Menlo-Regular.woff.ttf") format("truetype"), url("asset/fonts/Menlo-Regular.woff.svg#Menlo") format("svg");
-  font-weight: normal;
-  font-style: normal;
+.fullPage {
+  height: 100vh;
 }
-@font-face {
-  font-family: "firaSans";
-  src: url("asset/fonts/FiraSans-Regular.ttf.eot");
-  src: url("asset/fonts/FiraSans-Regular.ttf.eot?#iefix") format("embedded-opentype"), url("asset/fonts/FiraSans-Regular.ttf.woff") format("woff"), url("asset/fonts/FiraSans-Regular.ttf.ttf") format("truetype"), url("asset/fonts/FiraSans-Regular.ttf.svg#firaSans") format("svg");
-  font-weight: normal;
-  font-style: normal;
+
+.border {
+  border: 1px solid red;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -23,14 +16,6 @@
 body {
   font-family: sans-serif;
   background-color: #fff0e5;
-}
-
-.fullPage {
-  height: 100vh;
-}
-
-.border {
-  border: 1px solid red;
 }
 
 .hidden {
@@ -45,7 +30,68 @@ body {
   margin-right: auto;
 }
 
-nav {
+.cursor {
+  cursor: pointer;
+}
+
+.light {
+  color: #fff0e5;
+}
+
+.dark {
+  color: #11162f;
+}
+
+.shiftLeft {
+  margin-right: auto;
+}
+
+.shiftRight {
+  margin-left: auto;
+}
+
+.rotate180 {
+  transform: rotate(180deg);
+}
+
+.nav__link,
+.courses__navLink {
+  text-decoration: none;
+  transition: opacity 0.3s;
+}
+
+.nav__link:hover,
+.courses__navLink:hover {
+  opacity: 0.5;
+}
+
+.icon {
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
+.notice {
+  font-size: smaller;
+  padding: 12px;
+  background-color: #ffd300;
+  animation: slideIn 4s 0ms ease-in;
+}
+.notice__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.navbar {
   height: 79px;
   width: 100%;
   position: sticky;
@@ -53,28 +99,24 @@ nav {
   background-color: #fff0e5;
   z-index: 10000;
 }
-nav ion-icon {
-  font-size: 18px;
-  vertical-align: middle;
-}
-nav .searchIcon {
+.navbar .searchIcon {
   font-size: 25px;
   margin-right: 5px;
 }
-nav .navContainer {
+.navbar .navContainer {
   display: flex;
 }
-nav .navContainer .navMenu {
-  list-style: none;
+.navbar .navContainer .navMenu {
+  list-style-type: none;
   display: flex;
   align-items: center;
   width: 100%;
 }
-nav .navContainer .navItem,
-nav .navContainer .navItemRight {
+.navbar .navContainer .navItem,
+.navbar .navContainer .navItemRight {
   padding: 0px 8px;
 }
-nav .navContainer .rightSide {
+.navbar .navContainer .rightSide {
   margin-left: auto;
 }
 
@@ -117,7 +159,7 @@ nav .navContainer .rightSide {
 .headerSection .loginForm button {
   width: 100%;
   background-color: #3a11e5;
-  color: white;
+  color: #fff0e5;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -149,8 +191,8 @@ nav .navContainer .rightSide {
   column-gap: 1em;
 }
 .headerSection .signupLogo {
-  background-color: white;
-  border: 1px solid black;
+  background-color: #fff0e5;
+  border: 1px solid #000000;
   border-radius: 4px;
   margin-top: 5px;
   text-align: center;
@@ -166,7 +208,7 @@ nav .navContainer .rightSide {
   padding-top: 20px;
   padding-bottom: 50px;
   color: #fff0e5;
-  background-image: linear-gradient(#10162f 60%, #1e096e 40%);
+  background-image: linear-gradient(#11162f 60%, #1e096e 40%);
 }
 .courses .coursesContent {
   display: flex;
@@ -189,15 +231,10 @@ nav .navContainer .rightSide {
   align-items: center;
   justify-content: center;
   list-style: none;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #fff0e5;
 }
 .courses .coursesContent .coursesMenuContainer .coursesMenu .coursesNavItem {
-  padding-left: 9px;
-  padding-right: 9px;
-}
-.courses .coursesContent .coursesMenuContainer .coursesMenu .coursesNavLink {
-  color: #fff0e5;
-  text-decoration: none;
+  padding: 9px;
 }
 .courses .coursesContent .coursesMenuContainer .coursesMenu .coursesSelected {
   padding-bottom: 5px;
@@ -205,7 +242,7 @@ nav .navContainer .rightSide {
 }
 .courses .coursesContent .coursesMenuContainer .coursesMenu .newCourse::after {
   content: "New";
-  color: #10162f;
+  color: #11162f;
   padding: 3px 5px;
   font-weight: 100;
   font-size: 50%;
@@ -221,7 +258,7 @@ nav .navContainer .rightSide {
 }
 .courses .coursesContent .coursesListContainer .courseBox {
   background-color: #fff0e5;
-  color: #10162f;
+  color: #11162f;
   border-radius: 3px;
   min-height: 220px;
   display: flex;
@@ -261,7 +298,7 @@ nav .navContainer .rightSide {
   margin-right: auto;
 }
 .courses .coursesContent .catalogButton {
-  background-color: #ceae24;
+  background-color: #ffd300;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -269,7 +306,7 @@ nav .navContainer .rightSide {
 }
 
 .code {
-  background-color: #10162f;
+  background-color: #11162f;
   color: #fff0e5;
   padding-top: 20px;
 }
@@ -330,8 +367,8 @@ nav .navContainer .rightSide {
   border-top: 1px solid gray;
 }
 .code .runButton a {
-  background-color: #ceae24;
-  color: #10162f;
+  background-color: #ffd300;
+  color: #11162f;
   text-decoration: none;
   width: fit-content;
   padding: 10px 20px;
@@ -358,7 +395,7 @@ nav .navContainer .rightSide {
   margin-bottom: 30px;
 }
 .code .welcomeText .codeText a {
-  color: #ceae24;
+  color: #ffd300;
   text-decoration: none;
   width: fit-content;
   padding: 10px 20px;
@@ -369,7 +406,7 @@ nav .navContainer .rightSide {
   background-color: #201e2f;
 }
 .code .welcomeText .codeText .lessonButton {
-  border: 4px solid #ceae24;
+  border: 4px solid #ffd300;
   cursor: pointer;
 }
 
@@ -397,8 +434,8 @@ nav .navContainer .rightSide {
   max-width: 20rem;
 }
 .quiz .quizContainer .quizText a {
-  background-color: #5231f4;
-  color: #eafdc5;
+  background-color: #3a11e5;
+  color: #fff0e5;
   text-decoration: none;
   width: fit-content;
   padding: 10px 20px;
@@ -437,7 +474,7 @@ nav .navContainer .rightSide {
   line-height: 2.5em;
 }
 .people .peopleHeaderDescription .exploreList {
-  color: #2400b5;
+  color: #3a11e5;
   display: flex;
   align-items: center;
 }
@@ -463,7 +500,7 @@ nav .navContainer .rightSide {
 }
 
 .signUp {
-  background-color: #3a0fe5;
+  background-color: #3a11e5;
 }
 .signUp .signUpContainer {
   display: grid;
@@ -488,7 +525,7 @@ nav .navContainer .rightSide {
 }
 .signUp .signUpContainer .signUpText a {
   background-color: #ffd300;
-  color: #10162f;
+  color: #11162f;
   text-decoration: none;
   width: fit-content;
   padding: 10px 20px;
@@ -528,8 +565,16 @@ nav .navContainer .rightSide {
   font-size: small;
   line-height: 1.3rem;
 }
+.footerContainer .footerLeft ol li,
+.footerContainer .footerRight ol li {
+  cursor: pointer;
+}
+.footerContainer .footerLeft ol li:hover,
+.footerContainer .footerRight ol li:hover {
+  opacity: 0.7;
+}
 .footerContainer .rightBorder {
-  border-left: 1px solid black;
+  border-left: 1px solid #000000;
 }
 
 .firstLinksLogo {
@@ -547,7 +592,6 @@ nav .navContainer .rightSide {
   display: flex;
   justify-content: space-between;
   border-top: 1px solid black;
-  display: flex;
 }
 .footerBottom ol {
   list-style: none;
