--- a/style/style.scss
+++ b/style/style.scss
@@ -1,20 +1,23 @@
-// Fonts import
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Tilt+Prism&display=swap');
-@mixin font($font-family, $font-file) {
-  @font-face {
-    font-family: $font-family;
-    src: url($font-file + '.eot');
-    src: url($font-file + '.eot?#iefix') format('embedded-opentype'),
-      url($font-file + '.woff') format('woff'),
-      url($font-file + '.ttf') format('truetype'),
-      url($font-file + '.svg#' + $font-family) format('svg');
-    font-weight: normal;
-    font-style: normal;
-  }
+// Testing class Remove this in final
+.fullPage {
+  height: 100vh;
 }
-@include font('Menlo', 'asset/fonts/Menlo-Regular.woff');
-@include font('firaSans', 'asset/fonts/FiraSans-Regular.ttf');
+.border {
+  border: 1px solid red;
+}
 
+// Color
+$primary: #fff0e5;
+$lightblue: #3a11e5;
+$blue: #1e096e;
+$darkBlue: #11162f;
+$yellow: #ffd300;
+$black: #000000;
+$gray: #201e2f;
+$lightGreen: #eafdc5;
+$shadow: rgb(184, 184, 184);
+
+// Global Classes
 * {
   margin: 0;
   padding: 0;
@@ -23,14 +26,7 @@
 
 body {
   font-family: sans-serif;
-  background-color: #fff0e5;
-}
-// Testing class
-.fullPage {
-  height: 100vh;
-}
-.border {
-  border: 1px solid red;
+  background-color: $primary;
 }
 
 // Utility class
@@ -46,19 +42,79 @@ body {
   margin-right: auto;
 }
 
-// Navigation
-nav {
+.cursor {
+  cursor: pointer;
+}
+
+.light {
+  color: $primary;
+}
+
+.dark {
+  color: $darkBlue;
+}
+
+.shiftLeft {
+  margin-right: auto;
+}
+
+.shiftRight {
+  margin-left: auto;
+}
+
+.rotate180 {
+  transform: rotate(180deg);
+}
+
+//Main navigation bar style
+.nav__link,
+.courses__navLink {
+  text-decoration: none;
+  transition: opacity 0.3s;
+}
+
+.nav__link:hover,
+.courses__navLink:hover {
+  opacity: 0.5;
+}
+
+.icon {
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+//animation
+@keyframes slideIn {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
+
+// Notice bar
+.notice {
+  font-size: smaller;
+  padding: 12px;
+  background-color: $yellow;
+  animation: slideIn 4s 0ms ease-in;
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+}
+
+// Navigation bar
+.navbar {
   height: 79px;
   width: 100%;
   position: sticky;
   top: 0px;
-  background-color: #fff0e5;
+  background-color: $primary;
   z-index: 10000;
-
-  ion-icon {
-    font-size: 18px;
-    vertical-align: middle;
-  }
 
   .searchIcon {
     font-size: 25px;
@@ -68,7 +124,7 @@ nav {
   .navContainer {
     display: flex;
     .navMenu {
-      list-style: none;
+      list-style-type: none;
       display: flex;
       align-items: center;
       width: 100%;
@@ -76,6 +132,7 @@ nav {
     .navItem,
     .navItemRight {
       padding: 0px 8px;
+      // cursor: pointer;
     }
     .rightSide {
       margin-left: auto;
@@ -97,7 +154,7 @@ nav {
   }
 
   .teacherImg {
-    box-shadow: -10px 10px 5px rgb(184, 184, 184);
+    box-shadow: -10px 10px 5px $shadow;
     border: 1px solid black;
     width: 80%;
   }
@@ -122,13 +179,12 @@ nav {
     input {
       width: 100%;
       padding: 10px;
-      // margin-top: 5px;
     }
 
     button {
       width: 100%;
-      background-color: #3a11e5;
-      color: white;
+      background-color: $lightblue;
+      color: $primary;
       padding: 10px 20px;
       border: none;
       border-radius: 4px;
@@ -164,8 +220,8 @@ nav {
     column-gap: 1em;
   }
   .signupLogo {
-    background-color: white;
-    border: 1px solid black;
+    background-color: $primary;
+    border: 1px solid $black;
     border-radius: 4px;
     margin-top: 5px;
     text-align: center;
@@ -183,9 +239,9 @@ nav {
 .courses {
   padding-top: 20px;
   padding-bottom: 50px;
-  color: #fff0e5;
+  color: $primary;
   // background-color: #10162f;
-  background-image: linear-gradient(#10162f 60%, #1e096e 40%);
+  background-image: linear-gradient($darkBlue 60%, $blue 40%);
   .coursesContent {
     display: flex;
     flex-direction: column;
@@ -205,26 +261,21 @@ nav {
         align-items: center;
         justify-content: center;
         list-style: none;
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid $primary;
         .coursesNavItem {
-          padding-left: 9px;
-          padding-right: 9px;
-        }
-        .coursesNavLink {
-          color: #fff0e5;
-          text-decoration: none;
+          padding: 9px;
         }
         .coursesSelected {
           padding-bottom: 5px;
-          border-bottom: 3px solid #ffd300;
+          border-bottom: 3px solid $yellow;
         }
         .newCourse::after {
           content: 'New';
-          color: #10162f;
+          color: $darkBlue;
           padding: 3px 5px;
           font-weight: 100;
           font-size: 50%;
-          background-color: #ffd300;
+          background-color: $yellow;
           border-radius: 10px;
         }
       }
@@ -236,8 +287,8 @@ nav {
       gap: 25px;
       padding: 20px;
       .courseBox {
-        background-color: #fff0e5;
-        color: #10162f;
+        background-color: $primary;
+        color: $darkBlue;
         border-radius: 3px;
         min-height: 220px;
         display: flex;
@@ -249,7 +300,7 @@ nav {
           font-weight: 100;
           font-size: small;
           font-family: menlo;
-          background-color: #eafdc5;
+          background-color: $lightGreen;
           border-radius: 3px;
         }
         .courseBody {
@@ -279,7 +330,7 @@ nav {
       margin-right: auto;
     }
     .catalogButton {
-      background-color: #ceae24;
+      background-color: $yellow;
       // color: white;
       padding: 10px 20px;
       border: none;
@@ -291,8 +342,8 @@ nav {
 
 //Code section
 .code {
-  background-color: #10162f;
-  color: #fff0e5;
+  background-color: $darkBlue;
+  color: $primary;
   padding-top: 20px;
   .codeContainer {
     padding-top: 2em;
@@ -337,7 +388,7 @@ nav {
     }
     .codeTextBox {
       grid-column: 1/2;
-      background-color: #201e2f;
+      background-color: $gray;
       width: 100%;
       border-right: 1px solid gray;
       padding: 20px 0px 20px 20px;
@@ -355,8 +406,8 @@ nav {
     justify-content: end;
     border-top: 1px solid gray;
     a {
-      background-color: #ceae24;
-      color: #10162f;
+      background-color: $yellow;
+      color: $darkBlue;
       text-decoration: none;
       width: fit-content;
       padding: 10px 20px;
@@ -385,7 +436,7 @@ nav {
         margin-bottom: 30px;
       }
       a {
-        color: #ceae24;
+        color: $yellow;
         text-decoration: none;
         width: fit-content;
         padding: 10px 20px;
@@ -393,10 +444,10 @@ nav {
         border-radius: 4px;
       }
       a:hover {
-        background-color: #201e2f;
+        background-color: $gray;
       }
       .lessonButton {
-        border: 4px solid #ceae24;
+        border: 4px solid $yellow;
         cursor: pointer;
       }
     }
@@ -404,7 +455,7 @@ nav {
 }
 
 .quiz {
-  background-color: #ffd300;
+  background-color: $yellow;
   .quizContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -425,8 +476,8 @@ nav {
         max-width: 20rem;
       }
       a {
-        background-color: #5231f4;
-        color: #eafdc5;
+        background-color: $lightblue;
+        color: $primary;
         text-decoration: none;
         width: fit-content;
         padding: 10px 20px;
@@ -468,7 +519,7 @@ nav {
     font-size: small;
     line-height: 2.5em;
     .exploreList {
-      color: #2400b5;
+      color: $lightblue;
       display: flex;
       align-items: center;
     }
@@ -500,7 +551,7 @@ nav {
 
 //signUp Section
 .signUp {
-  background-color: #3a0fe5;
+  background-color: $lightblue;
   .signUpContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -510,7 +561,7 @@ nav {
       display: flex;
       flex-direction: column;
       margin: 2rem 3rem;
-      color: #fff0e5;
+      color: $primary;
       h1 {
         max-width: 20rem;
         font-size: 2.5rem;
@@ -522,8 +573,8 @@ nav {
         max-width: 20rem;
       }
       a {
-        background-color: #ffd300;
-        color: #10162f;
+        background-color: $yellow;
+        color: $darkBlue;
         text-decoration: none;
         width: fit-content;
         padding: 10px 20px;
@@ -544,6 +595,7 @@ nav {
     }
   }
 }
+
 //footer section
 
 .footerContainer {
@@ -564,10 +616,16 @@ nav {
       list-style: none;
       font-size: small;
       line-height: 1.3rem;
+      li {
+        cursor: pointer;
+      }
+      li:hover {
+        opacity: 0.7;
+      }
     }
   }
   .rightBorder {
-    border-left: 1px solid black;
+    border-left: 1px solid $black;
   }
 }
 
@@ -591,13 +649,12 @@ nav {
     font-size: small;
     display: flex;
     li::after {
-      content: '\00a0 \00a0| \00a0 \00a0 ';
+      content: '\00a0 \00a0 | \00a0 \00a0 ';
     }
   }
   p {
     font-size: small;
   }
-  display: flex;
 }
 
 // Responsive for Mobile
