--- a/style/style.scss
+++ b/style/style.scss
@@ -66,6 +66,101 @@ body {
   transform: rotate(180deg);
 }
 
+.icon {
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+.iconLrg {
+  padding: 10px 20px;
+  font-size: 25px;
+  vertical-align: center;
+}
+
+.course__selected {
+  padding-bottom: 5px;
+  border-bottom: 3px solid $yellow;
+}
+
+.course__card {
+  background-color: $primary;
+  color: $darkBlue;
+  border-radius: 3px;
+  min-height: 220px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  &--header {
+    padding: 5px 10px;
+    font-weight: 100;
+    font-size: small;
+    font-family: menlo;
+    background-color: $lightGreen;
+    border-radius: 3px;
+  }
+  &--body {
+    padding: 10px;
+    font-weight: 100;
+    font-size: small;
+    height: 100%;
+
+    &--name {
+      margin-bottom: 1em;
+    }
+  }
+  &--footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    border-top: 1px dotted black;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    font-size: small;
+  }
+}
+
+.searchIcon {
+  font-size: 25px;
+  margin-right: 5px;
+}
+
+.img {
+  width: 100%;
+  height: auto;
+}
+
+.btn {
+  padding: 10px 20px;
+  border-radius: 4px;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.title--lrg {
+  font-size: 3rem;
+}
+
+.info--title {
+  max-width: 20rem;
+  padding: 1rem 0rem;
+}
+.info--text {
+  font-size: smaller;
+  line-height: 1.3rem;
+  max-width: 20rem;
+}
+.info--btn {
+  margin-top: 1rem;
+  max-width: fit-content;
+}
+.info--img {
+  text-align: center;
+}
+
 //Main navigation bar style
 .nav__link,
 .courses__navLink {
@@ -78,9 +173,43 @@ body {
   opacity: 0.5;
 }
 
-.icon {
-  font-size: 20px;
-  vertical-align: middle;
+.course--card {
+  background-color: $primary;
+  color: $darkBlue;
+  border-radius: 3px;
+  min-height: 220px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  .courseHeader {
+    padding: 5px 10px;
+    font-weight: 100;
+    font-size: small;
+    font-family: menlo;
+    background-color: $lightGreen;
+    border-radius: 3px;
+  }
+  .courseBody {
+    padding: 10px;
+    font-weight: 100;
+    font-size: small;
+    height: 100%;
+    .courseName {
+      margin-bottom: 1em;
+    }
+  }
+  .courseFooter {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    border-top: 1px dotted black;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    font-size: small;
+  }
 }
 
 //animation
@@ -99,10 +228,8 @@ body {
   padding: 12px;
   background-color: $yellow;
   animation: slideIn 4s 0ms ease-in;
-  &__container {
+  &__content {
     display: flex;
-    align-items: center;
-    justify-content: center;
     text-align: center;
   }
 }
@@ -116,121 +243,103 @@ body {
   background-color: $primary;
   z-index: 10000;
 
-  .searchIcon {
-    font-size: 25px;
-    margin-right: 5px;
-  }
-
-  .navContainer {
+  .navbar__content {
     display: flex;
-    .navMenu {
+    .navbar__content__menu {
       list-style-type: none;
       display: flex;
       align-items: center;
       width: 100%;
     }
-    .navItem,
-    .navItemRight {
+    .navbar__content__menu--item,
+    .navbar__content__menu--itemRight {
       padding: 0px 8px;
-      // cursor: pointer;
-    }
-    .rightSide {
-      margin-left: auto;
     }
   }
 }
 
 // Header Section
-.headerSection {
+.header__content {
   display: flex;
   align-items: center;
-  justify-content: center;
-  height: 100%;
-
-  .teacher,
-  .logInSection {
+  &__teacher,
+  &__logInSection {
     width: 50%;
     height: 100%;
   }
 
-  .teacherImg {
+  .teacher--img {
     box-shadow: -10px 10px 5px $shadow;
     border: 1px solid black;
     width: 80%;
   }
-  .teacher {
+  &__teacher {
     display: flex;
-    align-items: center;
     justify-content: center;
   }
 
-  .logInSection {
+  &__logInSection {
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: center;
     padding: 3em;
   }
-  .loginForm {
-    .loginHeader {
+
+  .login__form {
+    &--header {
       line-height: 2rem;
       padding-bottom: 10px;
     }
-    input {
+    &__input {
       width: 100%;
       padding: 10px;
     }
 
-    button {
+    &--button {
       width: 100%;
       background-color: $lightblue;
       color: $primary;
-      padding: 10px 20px;
       border: none;
-      border-radius: 4px;
-      cursor: pointer;
     }
 
     input[name='email'] {
-      margin-bottom: 2em;
+      margin-bottom: 2rem;
     }
+
     .password {
       display: flex;
       flex-direction: column;
-    }
-    .passwordLabel {
-      display: flex;
-      justify-content: space-between;
+
+      &--label {
+        display: flex;
+        justify-content: space-between;
+      }
     }
   }
-  .signupInfo {
+
+  &--info {
     margin-top: 30px;
     font-weight: 100;
     line-height: 1.6em;
   }
 
-  .signupOptText {
+  &--signUpOptText {
     margin: 10px 0px;
   }
 
-  .signupOptLogo {
+  &--signUpOptLogo {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(55px, 1fr));
     grid-template-rows: auto;
     column-gap: 1em;
   }
-  .signupLogo {
+  &--signUpLogo {
     background-color: $primary;
     border: 1px solid $black;
     border-radius: 4px;
     margin-top: 5px;
     text-align: center;
-    cursor: pointer;
-    ion-icon {
-      padding: 10px 20px;
-      font-size: 25px;
-      vertical-align: center;
-    }
   }
 }
 
@@ -240,35 +349,32 @@ body {
   padding-top: 20px;
   padding-bottom: 50px;
   color: $primary;
-  // background-color: #10162f;
   background-image: linear-gradient($darkBlue 60%, $blue 40%);
-  .coursesContent {
+
+  &__content {
     display: flex;
     flex-direction: column;
-    .coursesHeader {
+    &__header {
       text-align: center;
       padding: 20px;
-      .coursesFirstTitle {
+      &--firstTitle {
         font-family: menlo;
         font-weight: 100;
       }
     }
-    .coursesMenuContainer {
+
+    &__nav {
       margin-left: auto;
       margin-right: auto;
-      .coursesMenu {
+
+      &__navMenu {
         display: flex;
-        align-items: center;
-        justify-content: center;
         list-style: none;
         border-bottom: 1px solid $primary;
-        .coursesNavItem {
+        &--navItem {
           padding: 9px;
         }
-        .coursesSelected {
-          padding-bottom: 5px;
-          border-bottom: 3px solid $yellow;
-        }
+
         .newCourse::after {
           content: 'New';
           color: $darkBlue;
@@ -280,62 +386,20 @@ body {
         }
       }
     }
-    .coursesListContainer {
+
+    .courses__cardsContainer {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       grid-template-rows: auto;
       gap: 25px;
       padding: 20px;
-      .courseBox {
-        background-color: $primary;
-        color: $darkBlue;
-        border-radius: 3px;
-        min-height: 220px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        .courseHeader {
-          padding: 5px 10px;
-          font-weight: 100;
-          font-size: small;
-          font-family: menlo;
-          background-color: $lightGreen;
-          border-radius: 3px;
-        }
-        .courseBody {
-          padding: 10px;
-          font-weight: 100;
-          font-size: small;
-          height: 100%;
-          .courseName {
-            margin-bottom: 1em;
-          }
-        }
-        .courseFooter {
-          display: flex;
-          justify-content: space-between;
-          align-items: end;
-          border-top: 1px dotted black;
-          margin-left: 10px;
-          margin-right: 10px;
-          padding-top: 5px;
-          padding-bottom: 10px;
-          font-size: small;
-        }
-      }
     }
-    .catalogButtonContainer {
+    .moreBtn--container {
       margin-left: auto;
       margin-right: auto;
     }
-    .catalogButton {
+    .more--btn {
       background-color: $yellow;
-      // color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
     }
   }
 }
@@ -345,14 +409,13 @@ body {
   background-color: $darkBlue;
   color: $primary;
   padding-top: 20px;
-  .codeContainer {
+  &__container {
     padding-top: 2em;
     padding-bottom: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
   }
-  .codeEditor {
+  &__editor {
     width: 60%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -360,20 +423,20 @@ body {
     border: 1px solid gray;
     margin-right: 50px;
 
-    .logo {
+    &__logo {
       grid-column: 1/3;
       font-size: 2em;
       padding: 10px 20px;
       background-color: black;
       border-bottom: 1px solid gray;
     }
-    .codeTitle {
+    &__title {
       grid-column: 1/3;
       display: flex;
       justify-content: space-between;
       background-color: black;
       vertical-align: center;
-      .codeTitleText {
+      &__text {
         border-bottom: 1px solid gray;
         width: 100%;
         padding: 10px 20px;
@@ -381,23 +444,21 @@ body {
         align-items: center;
       }
 
-      .codeTitleText:last-child {
+      &__text:last-child {
         border-left: 1px solid gray;
         justify-content: end;
       }
     }
-    .codeTextBox {
+
+    &__textBox {
       grid-column: 1/2;
       background-color: $gray;
       width: 100%;
       border-right: 1px solid gray;
       padding: 20px 0px 20px 20px;
-
-      .codeBlock {
-      }
     }
   }
-  .runButton {
+  &__btnContainer {
     grid-column: 1/3;
     margin-left: auto;
     background-color: black;
@@ -405,50 +466,39 @@ body {
     display: flex;
     justify-content: end;
     border-top: 1px solid gray;
-    a {
+    .code--btn {
       background-color: $yellow;
-      color: $darkBlue;
       text-decoration: none;
-      width: fit-content;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+      color: $darkBlue;
     }
   }
-  .output {
+
+  &__output {
     grid-column: 2/3;
   }
 
-  .welcomeText {
+  .code__text {
     width: 40%;
-    .codeText {
-      h4 {
-        font-family: menlo;
+    &__container {
+      &__titleSmall {
         margin-bottom: 25px;
       }
-      h1 {
-        font-size: 50px;
+      &__titleLrg {
         padding-bottom: 25px;
       }
-      p {
+      &__text {
         line-height: 2em;
         margin-bottom: 30px;
       }
-      a {
+      &__btn {
         color: $yellow;
-        text-decoration: none;
         width: fit-content;
-        padding: 10px 20px;
-        margin-right: 5px;
-        border-radius: 4px;
       }
-      a:hover {
+      &__btn:hover {
         background-color: $gray;
       }
-      .lessonButton {
+      .lesson--btn {
         border: 4px solid $yellow;
-        cursor: pointer;
       }
     }
   }
@@ -456,39 +506,18 @@ body {
 
 .quiz {
   background-color: $yellow;
-  .quizContainer {
+  &__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 8rem 0rem;
-
-    .quizText {
-      display: flex;
-      flex-direction: column;
-      margin: 2rem 3rem;
-      h1 {
-        max-width: 20rem;
-        font-size: 2.5rem;
-        padding: 1rem 0rem;
-      }
-      p {
-        font-size: smaller;
-        line-height: 1.3rem;
-        max-width: 20rem;
-      }
-      a {
-        background-color: $lightblue;
-        color: $primary;
-        text-decoration: none;
-        width: fit-content;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        margin-top: 2rem;
-        cursor: pointer;
-      }
-    }
-    .quizImg {
-      text-align: center;
+  }
+  &__info {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 3rem;
+    &__btn {
+      background-color: $lightblue;
+      color: $primary;
     }
   }
 }
@@ -513,36 +542,33 @@ body {
   padding: 3rem 0;
   z-index: 0;
 
-  .peopleHeaderDescription {
+  &__headerDesc {
     display: flex;
     justify-content: space-between;
     font-size: small;
     line-height: 2.5em;
-    .exploreList {
-      color: $lightblue;
-      display: flex;
-      align-items: center;
-    }
   }
-
-  .testimonialContainer {
+  &__explore {
+    color: $lightblue;
+    display: flex;
+    align-items: center;
+  }
+  .testimonial__card {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     gap: 2rem;
     margin-top: 3rem;
     .testimonial {
-      h3 {
+      &__header {
         line-height: 1.3rem;
         font-size: 1rem;
       }
-      p {
+      &__text {
         font-family: menlo;
         line-height: 1.1rem;
         font-size: 0.7rem;
       }
-      img {
-        width: 100%;
-        height: auto;
+      &__img {
         border: 1px solid black;
       }
     }
@@ -552,77 +578,58 @@ body {
 //signUp Section
 .signUp {
   background-color: $lightblue;
-  .signUpContainer {
+  &__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 3rem 0rem;
-
-    .signUpText {
-      display: flex;
-      flex-direction: column;
-      margin: 2rem 3rem;
-      color: $primary;
-      h1 {
-        max-width: 20rem;
-        font-size: 2.5rem;
-        padding: 1rem 0rem;
-      }
-      p {
-        font-size: smaller;
-        line-height: 1.3rem;
-        max-width: 20rem;
-      }
-      a {
-        background-color: $yellow;
-        color: $darkBlue;
-        text-decoration: none;
-        width: fit-content;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        margin-top: 2rem;
-        cursor: pointer;
-      }
-    }
-    .signUpImg {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      img {
-        width: 80%;
-        height: auto;
-      }
-    }
+  }
+  &__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin: 2rem 3rem;
+    color: $primary;
+  }
+  &__btn {
+    background-color: $yellow;
+    color: $darkBlue;
+  }
+  &--imgContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &--img {
+    width: 80%;
+    height: auto;
   }
 }
 
 //footer section
 
-.footerContainer {
+.footer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   margin-top: 2rem;
 
-  .footerLeft,
-  .footerRight {
+  &__left,
+  &__right {
     display: flex;
     justify-content: space-around;
+  }
 
-    .footerHeader {
-      font-weight: 700;
-      padding-bottom: 0.31rem;
-    }
-    ol {
-      list-style: none;
-      font-size: small;
-      line-height: 1.3rem;
-      li {
-        cursor: pointer;
-      }
-      li:hover {
-        opacity: 0.7;
-      }
-    }
+  &__header {
+    font-weight: 700;
+    padding-bottom: 0.31rem;
+  }
+  &__nav__content {
+    list-style: none;
+    font-size: small;
+    line-height: 1.3rem;
+  }
+  &__item:hover {
+    opacity: 0.5;
   }
   .rightBorder {
     border-left: 1px solid $black;
@@ -638,58 +645,73 @@ body {
   }
 }
 
-.footerBottom {
+.footer__bottom {
   margin-top: 10px;
   padding: 10px 0px;
   display: flex;
   justify-content: space-between;
   border-top: 1px solid black;
-  ol {
+  &__menu {
     list-style: none;
     font-size: small;
     display: flex;
-    li::after {
-      content: '\00a0 \00a0 | \00a0 \00a0 ';
-    }
   }
-  p {
+  &__item::after {
+    content: '\00a0 \00a0 | \00a0 \00a0 ';
+  }
+
+  &__text {
     font-size: small;
   }
 }
 
 // Responsive for Mobile
 @media only screen and (max-width: 900px) {
-  .navItem {
+  .navbar__content__menu--item {
     display: none;
   }
   .navMenuIcon {
     display: block;
   }
-  .headerSection {
+  .header__content {
     display: block;
     height: 100%;
-    .teacher,
-    .logInSection {
+    .header__content__teacher,
+    .header__content__logInSection {
       width: 100%;
       height: 100%;
       padding: 1em;
     }
-    .signupLogo ion-icon {
-      font-size: 20px;
-      padding: 5px 30px;
-      vertical-align: center;
-    }
   }
   .code {
-    .codeContainer {
+    .code__container {
       display: block;
       padding-top: 10px;
     }
-    .codeEditor,
-    .codeText,
-    .welcomeText {
+    .code__editor,
+    .code__text {
       width: 100%;
-      margin-top: 30px;
+      margin: 3rem 0rem;
     }
+  }
+  .quiz__container,
+  .signUp__container {
+    display: block;
+  }
+
+  .footer__left,
+  .footer__right {
+    margin-bottom: 3rem;
+  }
+  .footer .rightBorder {
+    border-left: 0px solid $primary;
+  }
+
+  .footer__bottom__menu {
+    display: block;
+  }
+  .footer__bottom__item,
+  .footer__bottom__text {
+    margin: 1rem;
   }
 }
