--- a/style/style.scss
+++ b/style/style.scss
@@ -161,6 +161,10 @@ body {
   text-align: center;
 }
 
+.noListStyle {
+  list-style: none;
+}
+
 .nav__link,
 .courses__navLink {
   text-decoration: none;
@@ -172,13 +176,26 @@ body {
   opacity: 0.5;
 }
 
+.displayBlock {
+  display: block;
+}
+
 //animation
 @keyframes slideIn {
   from {
-    opacity: 0%;
+    transform: translateX(100%);
   }
   to {
-    opacity: 100%;
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0%);
   }
 }
 
@@ -187,7 +204,7 @@ body {
   font-size: smaller;
   padding: 12px;
   background-color: $yellow;
-  animation: slideIn 4s 0ms ease-in;
+  animation: slideDown 1s 0ms ease-in;
   &__content {
     display: flex;
     text-align: center;
@@ -202,19 +219,51 @@ body {
   top: 0px;
   background-color: $primary;
   z-index: 10000;
+  position: relative;
 
-  .navbar__content {
+  &__content {
     display: flex;
-    .navbar__content__menu {
+
+    &--itemRight,
+    &--itemLeft {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &--itemRight {
+      &--menu {
+        display: flex;
+      }
+    }
+    &__menu {
       list-style-type: none;
       display: flex;
       align-items: center;
       width: 100%;
+      &--item,
+      &--itemRight {
+        padding: 0px 8px;
+      }
     }
-    .navbar__content__menu--item,
-    .navbar__content__menu--itemRight {
-      padding: 0px 8px;
-    }
+  }
+}
+
+.navbar__dropdown__menu {
+  display: none;
+  list-style: none;
+  position: absolute;
+  background-color: white;
+  border: 1px solid black;
+  padding: 1rem;
+
+  &--item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  }
+
+  &--item:hover {
+    color: $lightblue;
   }
 }
 
@@ -625,11 +674,45 @@ body {
   }
 }
 
+// video section
+.video {
+  display: relative;
+  position: relative;
+
+  &__close {
+    position: absolute;
+    top: -52px;
+    left: -15px;
+    font-size: larger;
+    color: $darkBlue;
+    background-color: rgb(234, 253, 197, 0.8);
+    padding: 0.5rem;
+    border-radius: 4px;
+  }
+  &__container {
+    display: absolute;
+    max-width: fit-content;
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 0.5rem;
+    background-color: $yellow;
+    border: 1rem solid $lightblue;
+    opacity: 1;
+    animation: slideIn 3s 0ms both;
+  }
+}
+
 // Responsive for Mobile
 @media only screen and (max-width: 900px) {
-  .navbar__content__menu--item {
-    display: none;
+  .navbar {
+    &__content {
+      &--itemLeft {
+        display: none;
+      }
+    }
   }
+
   .navMenuIcon {
     display: block;
   }
