--- a/style/css/style.css
+++ b/style/css/style.css
@@ -22,6 +22,10 @@ body {
   display: none;
 }
 
+.show {
+  display: block;
+}
+
 .container {
   display: block;
   width: 85%;
@@ -169,12 +173,17 @@ body {
   display: block;
 }
 
-@keyframes slideIn {
+input {
+  width: 100%;
+  padding: 10px;
+}
+
+@keyframes showIn {
   from {
-    transform: translateX(100%);
+    opacity: 0;
   }
   to {
-    transform: translateX(0%);
+    opacity: 100%;
   }
 }
 @keyframes slideDown {
@@ -196,14 +205,65 @@ body {
   text-align: center;
 }
 
+.mobile__nav {
+  display: none;
+  background-color: white;
+  position: absolute;
+  width: 100%;
+  height: 100dvh;
+  z-index: 2;
+}
+.mobile__nav__header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 8%;
+  justify-content: space-between;
+  background-color: #fff0e5;
+}
+.mobile__nav__body {
+  display: block;
+  border-bottom: 1px solid #201e2f;
+  padding-bottom: 2rem;
+}
+.mobile__nav__body .searchBox {
+  margin-top: 1rem;
+}
+.mobile__nav__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.mobile__nav__link {
+  display: flex;
+  align-items: center;
+}
+.mobile__nav__link ion-icon {
+  padding-left: 0;
+}
+.mobile__nav__item:hover, .mobile__nav__link:hover {
+  opacity: 0.5;
+  transition: opacity 0.5s;
+  cursor: pointer;
+}
+.mobile__nav__footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 1rem;
+}
+.mobile__nav__footer .btn {
+  margin: 0.4rem;
+}
+
 .navbar {
   height: 79px;
   width: 100%;
   position: sticky;
   top: 0px;
   background-color: #fff0e5;
-  z-index: 10000;
-  position: relative;
+  z-index: 1;
 }
 .navbar__content {
   display: flex;
@@ -224,6 +284,24 @@ body {
 }
 .navbar__content__menu--item, .navbar__content__menu--itemRight {
   padding: 0px 8px;
+}
+
+.scrollTop {
+  display: none;
+}
+.scrollTop .scrollUpIcon {
+  transition: font-size 1s;
+  font-size: 5rem;
+  position: fixed;
+  z-index: 10;
+  bottom: 2rem;
+  right: 3rem;
+  color: #8a0000;
+}
+
+.scrollUpIcon:hover {
+  font-size: 6rem;
+  opacity: 0.7;
 }
 
 .navbar__dropdown__menu {
@@ -270,10 +348,6 @@ body {
 .header__content .login__form--header {
   line-height: 2rem;
   padding-bottom: 10px;
-}
-.header__content .login__form__input {
-  width: 100%;
-  padding: 10px;
 }
 .header__content .login__form--button {
   width: 100%;
@@ -529,6 +603,7 @@ body {
 
 .signUp {
   background-color: #3a11e5;
+  color: #fff0e5;
 }
 .signUp__container {
   display: grid;
@@ -611,13 +686,19 @@ body {
 }
 
 .video {
-  display: relative;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0%;
+  background-color: rgba(96, 96, 96, 0.8);
+  height: 100dvh;
+  width: 100%;
+  z-index: 1000;
+  animation: showIn 2s 0ms both;
 }
 .video__close {
   position: absolute;
   top: -52px;
-  left: -15px;
+  right: -15px;
   font-size: larger;
   color: #11162f;
   background-color: rgba(234, 253, 197, 0.8);
@@ -625,16 +706,15 @@ body {
   border-radius: 4px;
 }
 .video__container {
-  display: absolute;
   max-width: fit-content;
   position: fixed;
-  bottom: 1rem;
-  right: 1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 0.5rem;
   background-color: #ffd300;
   border: 1rem solid #3a11e5;
   opacity: 1;
-  animation: slideIn 3s 0ms both;
 }
 
 @media only screen and (max-width: 900px) {
